force-app/main/default/objects/Destination__c/Destination__c.object-meta.xml
<CustomObject>
    <description>This Object will store all the destination details for integration as well as for APTTUS</description>
    <label>Destination</label>
    <nameField>
        <label>Destination Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Destinations</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>