force-app/main/default/objects/Destination__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Country details will be stored in this field</description>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>