force-app/main/default/objects/Destination__c/fields/DestinationCode__c.field-meta.xml
<CustomField>
    <fullName>DestinationCode__c</fullName>
    <description>This field will store the destination Code for particular destination</description>
    <label>Destination Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>