force-app/main/default/objects/Destination__c/fields/EndDateOffSet__c.field-meta.xml
<CustomField>
    <fullName>EndDateOffSet__c</fullName>
    <defaultValue>1</defaultValue>
    <description>This Field Will Specify the End Date off set for Accommodation and other related articles</description>
    <label>EndDate Off-Set</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>