force-app/main/default/objects/Destination__c/fields/GroupedLTDestinationName__c.field-meta.xml
<CustomField>
    <fullName>GroupedLTDestinationName__c</fullName>
    <description>Is used to identify the grouped destination name for LT destinations and use it in the "Preferrred Destinations" field.</description>
    <label>Grouped LT Destination Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>