force-app/main/default/objects/Destination__c/fields/IsLT__c.field-meta.xml
<CustomField>
    <fullName>IsLT__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to identify LT destinations.</description>
    <label>IsLT</label>
    <type>Checkbox</type>
</CustomField>