force-app/main/default/objects/Destination__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <description>Basically we will store English/Non English  values in this field</description>
    <label>Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>