force-app/main/default/objects/Destination__c/fields/StartDateOffSet__c.field-meta.xml
<CustomField>
    <fullName>StartDateOffSet__c</fullName>
    <defaultValue>-1</defaultValue>
    <description>This Field will specify the start date off set for Accommodation and other related articles</description>
    <label>StartDate Off-Set</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>